--- a/scripts/bobcat_IBM.Rmd
+++ b/scripts/bobcat_IBM.Rmd
@@ -8,14 +8,18 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+
 ### Placeholder code - fill in with our data
-```{r}
+
+**Exponential**
+```{r Exponential IBM}
 # parameters and state variables
-T_exp <- 25  # defines the total number of time steps of the simulation
+T_exp <- 15  # defines the total number of time steps of the simulation
 i <- 2 #indexing variable that ensures the starting populatin size is retained in the vector of populatin sizes
 n0_exp <- 43 #Starting population size (state variable)
-birth.average <- 2.6 # average number of new offspring from an individual in a population in the next time step
-prob.death <- 0.8 # probability an individual dies before the next time step
+birth.average <- 0.607 # average number of new offspring from an individual in a population in the next time step
+prob.death <- 0.6 # probability an individual dies before the next time step
 
 #random variables
 set.seed(124)
@@ -36,5 +40,37 @@ if (ibm_exp[i - 1] > 0) {
 #always plot your data
 plot(ibm_exp, type = "b", main="Individual Base Model - Exponential", 
      xlab="time step", ylab="observed value", pch=16, col="blue") #Simple plot of the observed values over the time steps
+```
+
+**Logistic**
+Change the probability of death
+Birth average is growth rate?
+```{r Logistic IBM}
+# parameters and state variables
+T_log <- 15 # defines the total number of time steps of the simulation
+i <- 2 #indexing variable that ensures the starting populatin size is retained in the vector of populatin sizes
+n0_log <-43 #Starting population size (state variable)
+K <- 50 #carrying capacity of the population
+birth.average <- 0.6 # average number of new offspring from an individual in a population in the next time step
+prob.death <- 0.8 # probability an individual dies before the next time step
+
+#random variables
+set.seed(100)
+birth <- function(t){sum(rpois(t, lambda = birth.average * exp(-t/K)))}
+death <- function(t){rbinom(1, size = t, prob = prob.death)}
+
+#Single run of an IBM with random birth and death.  Note, IF/ELSE statement is used to ensure populations that go to zero stay at extinct
+ibm_log <- rep(n0_log, T_log) 
+while(i <= T_log){
+  if (ibm_log[i-1] > 0) {
+    ibm_log[i] <- ibm_log[i-1] + birth(ibm_log[i-1]) - death(ibm_log[i-1])
+    i<- i + 1
+  } else {
+    ibm_log[i] <- 0
+    i <- i + 1
+  }}
+
+plot(ibm_log, type = "b", main="Individual Base Model - Logistic", 
+     xlab = "time step", ylab = "observed value", col = "blue") 
 ```
 
