--- a/scripts/bobcat_life_table.Rmd
+++ b/scripts/bobcat_life_table.Rmd
@@ -18,15 +18,90 @@ options(scipen=999)  # Disable Scientific Notation
 ## Start adding life table data here
 
 ```{r read in data}
-life_table <- read.csv(here("data", "bobcat_life_table.csv"), header = T)
-colnames(life_table) <- c("Age", "lx", "mx")
-
-counts <- c(1517, 549, 408, 235)
-
-life_table <- 
+bobcat_data <- read.csv(here("data", "bobcats_lifetable.csv"), header = T)
 ```
 
-```{r}
+```{r convert to survivorship}
+# create empty list
+surv_data <- c()
 
+# fill list with survival proportions via loop
+for(i in 1:nrow(bobcat_data)){
+  surv_data[i] <- bobcat_data$Counts[i]/bobcat_data$Counts[1]
+}
+
+# Add to bobcat_data data frame
+bobcat_data$survival <- surv_data
+```
+
+```{r fit survival to curve}
+# smooth survival data as curve
+
+
+# pick random points between age intervals (loop)
+
+
+```
+
+
+### Placeholder for future data
+Needs to be reworked to loop
+```{r Life Table Data}
+library(tidyverse)
+library(knitr)
+
+options(scipen=999)  # Disable Scientific Notation
+
+#Creat new columns of variables for calculation
+life_table <- bobcat_data %>%
+  mutate("lx*mx" = lx*mx, # Survivorship * fecundity -> Used to calculate (R0)
+         "x*lx*mx"=Age*lx*mx, # Used to calculate (G)
+         "Lx"=(lx+lead(lx))/2, # Avg survivorship
+         "Lx"=replace(Lx, 30, 0),   # change to 30 for oldest age class
+         "ex"=rev(cumsum(rev(Lx)))/lx, # Used to calculate growth rate (r)
+         "R0"=sum(lx*mx),# Net Reproductive Rate
+         "G"=sum(Age*lx*mx)/R0, # Generation time
+         "approx.r"=log(R0)/G #approximating growth rate
+  )
+
+#life_table #check your work
+
+# Use approximated growth rate to find actual growth rate
+df <- as.data.frame(life_table)
+r <- mean(df$approx.r) #approximated growth rate from df
+x <- sum(exp(-r*df$Age)*df$`lx*mx`) # 
+while (abs(x-1) >= 0.000001) {
+  if (x-1>0){
+    r <- r+0.00000001
+  }
+  else{
+    r <- r-0.00000001
+  }
+  x <- sum(exp(-r*df$Age)*df$`lx*mx`)
+  r
+}
+
+#use r to fill out the remainder of the life table
+life_table <- life_table %>%
+  mutate(
+    "approx.r" = log(R0)/G, 
+    "r" = r,
+    "Vx" = rev(cumsum(rev(exp(-r*Age)*lx*mx)))/exp(-r*Age)*lx, #Reproductive value
+    "lx*mx*e^-rx" = lx*mx*exp(-r*Age), # Used to get growth rate
+    "approx.Vx" = rev(cumsum(rev(exp(-approx.r*Age)*lx*mx)))/exp(-approx.r*Age)*lx, # Approximate reproductive value from an approximated r value
+    "approx.lx*mx*e^-rx" = lx*mx*exp(-approx.r*Age) # intermediate to get growth rate
+  )
+
+# as Yong Fu says, "Printing a pretty life table"!
+kable(life_table, format="markdown", align="c", digits = 3)
+
+# or just export it to a csv file
+#write.csv(life_table,"bison_life_table.csv", row.names = FALSE)
+
+# plot the data
+life_table %>% ggplot(aes(x = Age)) +
+  geom_line(aes(y = lx), size = 1) +
+  ggtitle("Survivorship of Yellowstone NP Bison") +
+  ylab("Survivorship") 
 ```
 
