--- a/scripts/bobcat_life_table.Rmd
+++ b/scripts/bobcat_life_table.Rmd
@@ -81,87 +81,6 @@ bobcat_survival <- bobcat_data[-1,]
 # Create list to loop into
 list_survival <- list()
 
-# Use loop to create list of lists containing potential survival data from age a to b
-for(i in 1:12){
-a <- seq(from = bobcat_data$survival[i], to = bobcat_data$survival[i+1], by = -0.001)
-list_survival[[i]] <- a
-}
-```
-
-### Placeholder for future data
-```{r Life Table Data}
-# Create multiple life tables with sampled survival data
-survival_sampled <- list()
-for(a in 1:12){
-  for(i in length(list_survival[[a]])){
-    survival_sampled[[a]] <- sample(list_survival[[a]], size = 5, replace = T)
-  }
-}
-
-# Needs to be fixed from here down #########################
-# Find a way to loop the new survival data into life tables
-life_table <- array(data = NA, dim = c(12, 7, 5))
-temp <- c()
-for(a in 1:12){
-  for(b in 1:100){
-    temp[a] <- survival_sampled[[a]][b]*bobcat_survival$mx[a]
-    life_table[,a,b] <- temp
-  }
-}
-
-############# from class ########################3
-life_table <- bobcat_data %>%
-  mutate("lx*mx" = lx*mx, # Survivorship * fecundity -> Used to calculate (R0)
-         "x*lx*mx"=age*lx*mx, # Used to calculate (G)
-         "Lx"=(lx+lead(lx))/2, # Avg survivorship
-         "Lx"=replace(Lx, 14, 0),   # change to 30 for oldest age class
-         "ex"=rev(cumsum(rev(Lx)))/lx, # Used to calculate growth rate (r)
-         "R0"=sum(lx*mx),# Net Reproductive Rate
-         "G"=sum(age*lx*mx)/R0, # Generation time
-         "approx.r"=log(R0)/G #approximating growth rate
-  )
-
-#life_table #check your work
-
-# Use approximated growth rate to find actual growth rate
-df <- as.data.frame(life_table)
-r <- mean(df$approx.r) #approximated growth rate from df
-x <- sum(exp(-r*df$Age)*df$`lx*mx`) # 
-while (abs(x-1) >= 0.000001) {
-  if (x-1>0){
-    r <- r+0.00000001
-  }
-  else{
-    r <- r-0.00000001
-  }
-  x <- sum(exp(-r*df$Age)*df$`lx*mx`)
-  r
-}
-
-#use r to fill out the remainder of the life table
-life_table <- life_table %>%
-  mutate(
-    "approx.r" = log(R0)/G, 
-    "r" = r,
-    "Vx" = rev(cumsum(rev(exp(-r*Age)*lx*mx)))/exp(-r*Age)*lx, #Reproductive value
-    "lx*mx*e^-rx" = lx*mx*exp(-r*Age), # Used to get growth rate
-    "approx.Vx" = rev(cumsum(rev(exp(-approx.r*Age)*lx*mx)))/exp(-approx.r*Age)*lx, # Approximate reproductive value from an approximated r value
-    "approx.lx*mx*e^-rx" = lx*mx*exp(-approx.r*Age) # intermediate to get growth rate
-  )
-
-# as Yong Fu says, "Printing a pretty life table"!
-kable(life_table, format="markdown", align="c", digits = 3)
-
-# or just export it to a csv file
-#write.csv(life_table,"bison_life_table.csv", row.names = FALSE)
-
-# plot the data
-life_table %>% ggplot(aes(x = Age)) +
-  geom_line(aes(y = lx), size = 1) +
-  ggtitle("Survivorship of Yellowstone NP Bison") +
-  ylab("Survivorship") 
-```
-```{r}
 #Teague's approach
 
 # Use loop to create list of lists containing potential survival data from age a to b
@@ -230,6 +149,17 @@ while (abs(y-1) >= 0.000001) {
 }
 
 
+```
+
+## Plotting the different modeled population
+```{r}
+ggplot(data = bobcat_lifetable,
+       aes(x = age,
+       y = survival))+
+  geom_point()+
+  geom_point(data = bobcat_lifetable,
+             aes(x=age,
+                 y = 1))
 ```
 
 
